# swc-plugin

./: .gitignore  Build.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  NEXTJS.md  README.md  build.rs  build.sh  package.json  pnpm-lock.yaml  rust-toolchain.toml  rustfmt.toml  version-map.json  versions.json
.cargo/: config.toml
.changeset/: all-pillows-dress.md  chilly-waves-pick.md  clever-hands-grow.md  config.json  cool-bulldogs-admire.md  cool-cheetahs-compete.md  curvy-crabs-chew.md  dry-boxes-swim.md  eager-pants-kiss.md  fluffy-meals-dance.md  forty-turtles-destroy.md  four-laws-prove.md  friendly-keys-wink.md  gold-llamas-relate.md  good-rules-watch.md  gorgeous-needles-shout.md  great-sheep-care.md  grumpy-badgers-provide.md  grumpy-buses-push.md  huge-needles-appear.md  lazy-cycles-eat.md  long-bats-cough.md  long-schools-lick.md  loud-ears-pull.md  mean-items-work.md  metal-houses-relax.md  olive-planets-burn.md  orange-seahorses-tickle.md  pre.json  pretty-nails-prove.md  purple-ghosts-rest.md  ripe-moles-give.md  rotten-needles-lie.md  short-beds-wash.md  silly-doors-relax.md  slow-parks-shout.md  small-moose-compare.md  small-toys-occur.md  social-bushes-look.md  spotty-teachers-flash.md  (+11 more)
scripts/: pack.mjs
src/: config.rs  constants.rs  lib.rs  sid.rs  state.rs
src/utils/: import.rs  keyof.rs  matcher.rs  method.rs  mod.rs  path.rs  unique.rs  uobject.rs
src/visitors/: analyzer.rs  force_scope.rs  meta.rs  mod.rs
src/visitors/force_scope/: hooks.rs  mod.rs  reflect.rs
src/visitors/hmr/: finder.rs  mod.rs  tools.rs
src/visitors/sid/: call_identity.rs  factory.rs  method.rs  mod.rs
tests/: with_fixture.rs
tests/fixtures/domain/create/: input.js  output.js
tests/fixtures/domain/no-legacy-methods/: config.json  input.js  output.js
tests/fixtures/domain/usage/: config.json  input.js  output.js
tests/fixtures/effect/: input.js
tests/fixtures/effect/sid-only/: output.js
tests/fixtures/effect/with-loc/: config.json  output.js
tests/fixtures/effect/with-names/: output.js
tests/fixtures/event/: input.js
tests/fixtures/event/sid-only/: output.js
tests/fixtures/nested_usage/: input.js  output.js
tests/fixtures/store/: input.js
(+98 files in other folders)
