[package]
name = "effector-swc-plugin"
version = "1.0.0-next.0"

authors = ["Kireev Mikhail"]
description = "SWC Plugin for Effector"

edition = "2024"
publish = false

[profile.release]
lto = true
debug = "none"
strip = "debuginfo"
opt-level = "s"
codegen-units = 1

[dependencies]
ahash = { version = "0.8.12", features = ["std"], default-features = false }
radix_fmt = "1.0.0"
serde = "1.0.228"
serde_json = "1.0.147"
swc_atoms = "9.0.0"
swc_core = { version = "52.0.0", features = [
  "ecma_plugin_transform",
  "ecma_quote",
  "ecma_utils",
  "ecma_parser",
] }

[dev-dependencies]
testing = "19.0.0"

[lib]
crate-type = ["cdylib", "rlib"]
